--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,4 @@ a.btn:hover,.nav li a:hover,.nav-btn:hover{background-color:#cc6cff;color:#fff;t
 	.slide img{height:100%;width:auto}
 	.contact .row:last-child{margin:0}
 }
+.hidden{display: none;}
