--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -2,7 +2,7 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h2>Hello. My name is <span class="highlight">Ian Blair</span> and I am a writer and cultural reporter living in New York City.</h2>
-			<a class="btn right" href="portfolio">View my Work</a>
+			<a class="btn right" href="work">View my Work</a>
 		</div>
 	</div>
 </div>
