--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 thumbnail">
-				<img alt="Me" src="http://33.media.tumblr.com/ba5be5c6ae930e40fa952be64c55ce92/tumblr_inline_n56s3lSNYr1rf3ewm.jpg" />
+				<img alt="Me" src="https://photos-5.dropbox.com/t/2/AABCqoNZR-znfKKahx6xhDnv6KF7KnK2LfUuf1etHATIfA/12/69054817/jpeg/32x32/1/_/1/2/tumblr_inline_n56s3lSNYr1rf3ewm.jpg/COHi9iAgASACIAMgBCAFIAYgBygBKAIoBw/Qa2wDdQ_q4XKyBVU8xd-k4XOPwXPLbnN4nMFaLEXbVo?size=1024x768&size_mode=2" />
 			</div>
 			<div class="col-md-6">
 				<h2><span class="highlight">Ian Blair</span> is a writer living in New York City.</h2>
@@ -11,20 +11,24 @@
 	</div>
 </div>
 
-<div id="instagram-card">
-    <div class="section-title lines">
-    	<h2><a href="https://instagram.com/i2theb/" target="_blank">Follow @i2theb on Instagram</a></h2>
-    </div>  
+<div class="container">
+	<div id="instagram-card">
+	    <div class="section-title lines">
+	    	<h2><a href="https://instagram.com/i2theb/" target="_blank">Follow @i2theb on Instagram</a></h2>
+	    </div>  
 
-    <div id="instafeed"></div>
+	    <div class="row">
+	    	<div id="instafeed"></div>
+	    </div>
 
-	<script type="text/javascript">
-		var userFeed = new Instafeed({
-		get: 'user',
-		userId: 2112000552,
-		accessToken: '2112000552.467ede5.cd3431f54ea145db9a6f5c5765e069de',
-		template: '<a class="fancybox desktop-2 mobile-half padded" href="{{image}}" rel="ig" title="{{caption}}"><img class="instagram-image" src="{{image}}" /></a>'
-		});
-		userFeed.run();        
-	</script>
+		<script type="text/javascript">
+			var feed = new Instafeed({
+			get: 'tagged',
+			tagName: 'sanfrancisco',
+			clientId: '20ad2023226f49ab834f0210ff9475ea',
+			template: '<a class="fancybox col-md-2 padded" href="{{image}}" rel="ig" title="{{caption}}"><img class="instagram-image" src="{{image}}" /></a>'
+			});
+			feed.run();        
+		</script>
+	</div>
 </div>
