Fixed photo links

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 thumbnail">
-				<img alt="Me" src="https://photos-5.dropbox.com/t/2/AABCqoNZR-znfKKahx6xhDnv6KF7KnK2LfUuf1etHATIfA/12/69054817/jpeg/32x32/1/_/1/2/tumblr_inline_n56s3lSNYr1rf3ewm.jpg/COHi9iAgASACIAMgBCAFIAYgBygBKAIoBw/Qa2wDdQ_q4XKyBVU8xd-k4XOPwXPLbnN4nMFaLEXbVo?size=1024x768&size_mode=2" />
+				<img alt="Me" src="https://dl.dropboxusercontent.com/u/69054817/ian_about.jpg" />
 			</div>
 			<div class="col-md-6">
 				<h2><span class="highlight">Ian Blair</span> is a writer living in New York City.</h2>
